# Space-Monkey

./: TODO List.txt  cleanup.sh
codigo_refatorado/: Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.in  libtool
codigo_refatorado/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
codigo_refatorado/include/: Makefile  Makefile.am  Makefile.am~  Makefile.in  SDL_Mapa.h  SDL_Mapa.h~  SDL_Sprite.h  SDL_Tela.h  animaException.h  animacao.h  animacao.h~  atiradorAngulado.h  atiradorMoreFire.h  atiradorRetardante.h  atiradorRetardante.h~  atiradorSimples.h  atiradorSimples.h~  audio.h  audio.h~  chipanze1.h~  config.h  constantes.h  draw.h  eventos.h  eventos.h~  fase.h  fase.h~  fortification.h  gameOverException.h  gorila1.h  gorila1.h~  gorila2.h~  horda.h  horda.h~  inimigo.h  initException.h  ironMan.h  jogador.h  jogador.h~  jogo.h  (+15 more)
codigo_refatorado/resources/: Makefile  Makefile.am  Makefile.in  mapa1Bmp.txt  mapa4Bmp.txt  mapa7Bmp.txt  mapa8Bmp.txt
codigo_refatorado/src/: Bombardeiro.cpp~  Makefile  Makefile.am  Makefile.am~  Makefile.in  MakefileSRC.am  SDL_Mapa.cpp  SDL_Mapa.cpp~  SDL_Mapa.lo  SDL_Sprite.cpp  SDL_Sprite.cpp~  SDL_Sprite.lo  SDL_Tela.cpp  SDL_Tela.cpp~  SDL_Tela.lo  agentesProtetores.cpp  agentesProtetores.lo  animacao.cpp  animacao.lo  atiradorAngulado.cpp  atiradorAngulado.lo  atiradorDuplo.cpp~  atiradorDuplo.lo  atiradorMoreFire.cpp  atiradorMoreFire.cpp~  atiradorMoreFire.lo  atiradorRetardante.lo  atiradorSimples.cpp~  atiradorSimples.lo  audio.cpp  audio.cpp~  audio.lo  bombardeiro.cpp  bombardeiro.lo  chipanze1.cpp  chipanze1.cpp~  chipanze1.lo  chipanze2.cpp  chipanze2.cpp~  chipanze2.lo  (+67 more)
codigo_refatorado/src/.deps/: SDL_Mapa.Plo  SDL_Sprite.Plo  SDL_Tela.Plo  agentesProtetores.Plo  animacao.Plo  atiradorAngulado.Plo  atiradorDuplo.Plo  atiradorMoreFire.Plo  atiradorRetardante.Plo  atiradorSimples.Plo  audio.Plo  bombardeiro.Plo  chipanze1.Plo  chipanze2.Plo  definicoesMapaLogico.Plo  draw.Plo  eventos.Plo  fase.Plo  fortification.Plo  gorila1.Plo  gorila2.Plo  horda.Plo  inicializador.Plo  inimigo.Plo  ironMan.Plo  jogador.Plo  jogo.Plo  mapa.Plo  mapaPlanicie.Plo  marcador.Plo  menuEventos.Plo  menus.Plo  muro.Plo  muroReforcado.Plo  orangotango.Plo  spacemonkey.Po  tanque.Plo  tela.Plo  torre.Plo  util.Plo  (+1 more)
codigo_refatorado/src/.libs/: libitem.lai
codigo_refatorado/src/SDL/: Makefile  Makefile.in  SDL_Mapa.cpp  SDL_Sprite.cpp
codigo_refatorado/src/animacao/: Makefile  Makefile.am  Makefile.in  animacao.cpp
codigo_refatorado/src/animacao/.deps/: animacao.Tpo
codigo_refatorado/src/eventos/: Makefile  Makefile.am  Makefile.in  eventos.cpp
codigo_refatorado/src/eventos/.deps/: eventos.Tpo
codigo_refatorado/src/fase/: Makefile  Makefile.am  Makefile.in
codigo_refatorado/src/fase/.deps/: fase.Tpo
codigo_refatorado/src/game/: Makefile  Makefile.am  Makefile.in  jogador.cpp  jogador.lo
codigo_refatorado/src/game/.deps/: jogador.Plo  jogo.Tpo
codigo_refatorado/src/inimigos/: Makefile  Makefile.am  Makefile.in  chipanze1.cpp  gorila1.cpp  orangotango.cpp  torre.cpp
codigo_refatorado/src/inimigos/.deps/: chipanze1.Tpo
codigo_refatorado/src/mapa/: Makefile  Makefile.am  Makefile.in  definicoesMapaLogico.cpp  mapa.cpp
codigo_refatorado/src/mapa/.deps/: definicoesMapaLogico.Tpo
codigo_refatorado/src/principal/: Makefile  Makefile.am  Makefile.in
codigo_refatorado/src/sistemas/: Makefile  Makefile.in  audio.cpp
codigo_refatorado/src/sistemas/.deps/: audio.Tpo
codigo_refatorado/src/torres/: Makefile  Makefile.in  atiradorSimples.cpp
codigo_refatorado/src/torres/.deps/: agentesProtetores.Tpo
codigo_refatorado/src/util/: Makefile  Makefile.am  Makefile.in
codigo_refatorado/src/util/.deps/: util.Tpo
include/: SDL_Mapa.h  agentesProtetores.h  chipanze1.h  constantes.h  definicoesMapaLogico.h  exception.h  exitException.h  fase.h  mapa.h  orangotango.h  tanque.h  torre.h
resources/: Makefile.am  Thumbs.db  mapa2Bmp.txt  mapa3Bmp.txt  mapa5Bmp.txt  mapa6Bmp.txt
space/spacemonkey-0.1.0/: cleanup.sh
space/spacemonkey-0.10.0/: Makefile  config.status  libtool
space/spacemonkey-0.10.0/include/: Makefile  Makefile.am  Makefile.in  SDL_Sprite.h  atiradorDuplo.h~  config.h  fase.h  gorila1.h  mapa.h  muro.h~  torre.h~
space/spacemonkey-0.12.0/: configure
space/spacemonkey-0.13.0/: ChangeLog  Makefile  config.status  configure  configure.in  libtool
space/spacemonkey-0.2.0/: Makefile  config.status  configure  configure.in  libtool
space/spacemonkey-0.3.0/: Makefile  config.status  configure.in  libtool
space/spacemonkey-0.6.0/src/: Makefile  Makefile.am  SDL_Mapa.cpp  SDL_Mapa.cpp~  fase.cpp  jogo.cpp  jogo.cpp~  spacemonkey.cpp
space/spacemonkey-0.6.0/src/.deps/: SDL_Mapa.Plo  SDL_Tela.Plo  fase.Plo  jogador.Plo  jogo.Plo  menus.Plo  spacemonkey.Po
src/: Makefile.am  SDL_Mapa.cpp  SDL_Tela.cpp  animacao.cpp  atiradorDuplo.cpp  atiradorMoreFire.cpp  atiradorRetardante.cpp  audio.cpp  bombardeiro.cpp  chipanze2.cpp  definicoesMapaLogico.cpp  draw.cpp  eventos.cpp  fase.cpp  fortification.cpp  inicializador.cpp  ironMan.cpp  jogador.cpp  mapa.cpp  mapaPlanicie.cpp  menuEventos.cpp  menus.cpp  teste.cpp  video.cpp
src/SDL/: Makefile  Makefile.am  Makefile.in  SDL_Mapa.cpp
src/SDL/.deps/: SDL_Mapa.Plo  SDL_Sprite.Plo  SDL_Tela.Plo
src/inimigos/: Makefile  Makefile.am  Makefile.in  chipanze2.cpp  gorila2.cpp  horda.cpp  inimigo.cpp  torre.cpp
src/inimigos/.deps/: chipanze1.Plo  chipanze2.Plo  gorila1.Plo  gorila2.Plo  horda.Plo  inimigo.Plo
src/sistemas/: Makefile  Makefile.am  Makefile.in
src/sistemas/.deps/: audio.Plo  inicializador.Plo  tela.Plo
src/torres/: Makefile  Makefile.am  Makefile.in  agentesProtetores.cpp  atiradorSimples.cpp  fortification.cpp  ironMan.cpp
src/torres/.deps/: agentesProtetores.Plo  atiradorAngulado.Plo  atiradorDuplo.Plo  atiradorMoreFire.Plo  atiradorRetardante.Plo  atiradorSimples.Plo  bombardeiro.Plo  fortification.Plo  ironMan.Plo  muro.Plo  muroReforcado.Plo  tanque.Plo  torre.Plo
(+421 files in other folders)
