# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Resources
spacemonkeydir = /opt/$(PACKAGE)/resources
dist_spacemonkey_DATA = DownMonkeyLogo.png mapa1.png mapa2.png mapa3.png mapa4.png mapa5.png mapa6.png mapa7.png mapa8.png marcadorAzul.png marcadorVermelho.png inimigo.png inimigo2.png inimigo3.png apresenta.png logo.png menu.png MenuExtras.png MenuExtras2.png MenuJogar.png MenuJogar2.png MenuSair.png MenuSair2.png torreSimples.png KGFeeling22.ttf gameOver.bmp preto.bmp tango.wav mapa1Bmp.txt mapa2Bmp.txt mapa3Bmp.txt mapa4Bmp.txt mapa5Bmp.txt mapa6Bmp.txt mapa7Bmp.txt mapa8Bmp.txt
