# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Library description
lib_LTLIBRARIES = libsdl.la

# Programs excluded from instalation
#noinst_PROGRAMS = atendimento
#bin_PROGRAMS = spacemonkey

# Library flags
libsdl_la_LDFLAGS = -static

# Library sources
libsdl_la_SOURCES = SDL_Mapa.cpp SDL_Sprite.cpp SDL_Tela.cpp

# Libraries needed to build our library
libsdl_la_LIBADD = 

# Program description

# Libraries needed to build program

# Include flags
INCLUDES = -I../../include -Wall -Wno-long-long -W -pedantic -ansi

