# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Library description
lib_LTLIBRARIES = libinimigos.la

# Programs excluded from instalation
#noinst_PROGRAMS = atendimento
#bin_PROGRAMS = spacemonkey

# Library flags
libinimigos_la_LDFLAGS = -static

# Library sources
libinimigos_la_SOURCES = chipanze1.cpp chipanze2.cpp gorila1.cpp gorila2.cpp horda.cpp inimigo.cpp orangotango.cpp

# Libraries needed to build our library
libinimigos_la_LIBADD = 

# Program description

# Libraries needed to build program

# Include flags
INCLUDES = -I../../include -Wall -Wno-long-long -W -pedantic -ansi

