# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Library description
lib_LTLIBRARIES = libsistemas.la

# Programs excluded from instalation
#noinst_PROGRAMS = atendimento
#bin_PROGRAMS = spacemonkey

# Library flags
libsistemas_la_LDFLAGS = -static

# Library sources
libsistemas_la_SOURCES = audio.cpp 	inicializador.cpp tela.cpp

# Libraries needed to build our library
libsistemas_la_LIBADD = 

# Program description

# Libraries needed to build program

# Include flags
INCLUDES = -I../../include -Wall -Wno-long-long -W -pedantic -ansi

