# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Library description
lib_LTLIBRARIES = libtorres.la

# Programs excluded from instalation
#noinst_PROGRAMS = atendimento
#bin_PROGRAMS = spacemonkey

# Library flags
libtorres_la_LDFLAGS = -static

# Library sources
libtorres_la_SOURCES = agentesProtetores.cpp atiradorAngulado.cpp atiradorDuplo.cpp atiradorMoreFire.cpp atiradorRetardante.cpp atiradorSimples.cpp bombardeiro.cpp fortification.cpp ironMan.cpp muro.cpp muroReforcado.cpp tanque.cpp torre.cpp

# Libraries needed to build our library
libtorres_la_LIBADD = 

# Program description

# Libraries needed to build program

# Include flags
INCLUDES = -I../../include -Wall -Wno-long-long -W -pedantic -ansi

