# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Library description
lib_LTLIBRARIES = libjogador.la

# Programs excluded from instalation
#noinst_PROGRAMS = atendimento
#bin_PROGRAMS = spacemonkey

# Library flags
libjogador_la_LDFLAGS = -static

# Library sources
libjogador_la_SOURCES = jogador.cpp  jogo.cpp

# Libraries needed to build our library
libjogador_la_LIBADD = 

# Program description

# Libraries needed to build program

# Include flags
INCLUDES = -I../../include -Wall -Wno-long-long -W -pedantic -ansi

