# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Library description
lib_LTLIBRARIES = libmapa.la

# Programs excluded from instalation
#noinst_PROGRAMS = atendimento
#bin_PROGRAMS = spacemonkey

# Library flags
libmapa_la_LDFLAGS = -static

# Library sources
libmapa_la_SOURCES = definicoesMapaLogico.cpp mapa.cpp marcador.cpp

# Libraries needed to build our library
libmapa_la_LIBADD = 

# Program description

# Libraries needed to build program

# Include flags
INCLUDES = -I../../include -Wall -Wno-long-long -W -pedantic -ansi

