# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Library description
lib_LTLIBRARIES = libprincipal.la

# Programs excluded from instalation
#noinst_PROGRAMS = atendimento
bin_PROGRAMS = spaceMonkey

# Library flags
libprincipal_la_LDFLAGS = -static -L./principal

# Library sources
libprincipal_la_SOURCES = menus.cpp spacemonkey.cpp
# Libraries needed to build our library
libprincipal_la_LIBADD = 

# Program description

# Libraries needed to build program

# Include flags
INCLUDES = -I../../include -Wall -Wno-long-long -W -pedantic -ansi

