# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Library description
lib_LTLIBRARIES = libutil.la

# Programs excluded from instalation
#noinst_PROGRAMS = atendimento
#bin_PROGRAMS = spacemonkey

# Library flags
libutil_la_LDFLAGS = -static

# Library sources
libutil_la_SOURCES = util.cpp 
# Libraries needed to build our library
libutil_la_LIBADD = 

# Program description

# Libraries needed to build program

# Include flags
INCLUDES = -I../../include -Wall -Wno-long-long -W -pedantic -ansi

