# Author: Edson Alves - edsonalves@unb.br
# Date: 21/12/2012

# Includes dir
libitemincludedir = $(includedir)/

# Include files
include_HEADERS = constantes.h nomesArquivos.h exception.h initException.h fileNotFoundException.h exitException.h animaException.h animacao.h jogador.h mapa.h SDL_Mapa.h tela.h SDL_Tela.h fase.h menuEventos.h menus.h jogo.h sprite.h SDL_Sprite.h inimigo.h chipanze1.h chipanze2.h gorila1.h gorila2.h orangotango.h horda.h
